v100
  - restrict adding xml:lang attribute to epub3 opf package tags
  - instead of exiting when audio, video, javascript, and mathml are used in the epub
      the accessbility schema metadata is simply not added, but all other functionality is employed

v097
  - fix whitespace indentaion error caused by copy /paste

v096
   - better handle cases when no xmpxml is available

v095
   - add support for auto filling in empty image alt-text attributes based
     on image XMP AltTextAccessibility metadata or exif ImageDescription metadata

v091
   - reverted to allowing duplicate images each with their own alt tag per link
   - Fix bug in Alt Text Editor cancel not actually canceling the image alt text updates

v090 - Beta
  - completely removed the  use of the Tk graphical user interface for image
    alt text editing becasue Tk and Pillow have no support for pure svg images.
    
    To replace it, The Qt for Python graphical user interface as provided by
    PySide6 (for Qt6) and PyQt5 (for Qt5) is used instead.  The resulting Qt
    based Alt Text Editing dialog is much improved and much more stable.

    As a result the new minimum supported version of Sigil is ***Sigil 1.60 or later***

  - if the OPF package tag does not have an xml:lang element to indicate the primary
    language of its metadata tags, one is now added based the primary epub dc:language

v055
  - add workaround for parsing glitch in quickparser

v054
  - add schema:accessibilityHazard metadata now required by the ACE Checker

v053
  - fix thumbnail scaling bug for wide but thin images that get truncated to 0 pixels in height
  
v052
  - no longer consider whitespace alone a valid xhtml title
  - properly look for and handle self-closed title tags in head when looking
       to replace titles
  - work around for quickparser.py serialization bug in Sigil v1.4.3 and earlier
  - no longer strip region off dc:language code
  - fix Windows specific bug when epub files use mix case

v051